--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,73 @@
--e .
--r requirements-tests.txt
--r requirements-docs.txt
+aiohttp==3.6.2
+aiohttp-swagger==1.0.14
+alabaster==0.7.12
+asn1crypto==1.3.0
+async-timeout==3.0.1
+atomicwrites==1.4.0; sys_platform == "win32"
+attrs==19.3.0
+babel==2.8.0
+blessings==1.7
+callee==0.3.1
+cattrs==1.0.0
+certifi==2017.11.5
+certvalidator==0.11.1
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3; sys_platform == "win32"
+coverage==5.1
+cryptography==2.9.2
+docutils==0.16
+fastapi==0.55.1
+h11==0.9.0
+httptools==0.1.1; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
+idna==2.6
+imagesize==1.2.0
+importlib-metadata==1.6.1; python_version < "3.8"
+inquirer==2.6.3
+jinja2==2.11.2
+jsonpointer==2.0
+markupsafe==1.1.1
+more-itertools==8.3.0
+multidict==4.7.6
+nano-python==2.0.1
+ordereddict==1.1
+oscrypto==1.2.0
+packaging==20.4
+paho-mqtt==1.5.0
+pluggy==0.13.1
+py==1.8.1
+pycparser==2.20
+pydantic==1.5.1
+pygments==2.6.1
+pyparsing==2.4.7
+pytest==5.4.3
+pytest-asyncio==0.12.0
+pytest-timeout==1.3.4
+python-editor==1.0.4
+pytz==2020.1
+pyyaml==5.3.1
+readchar==2.0.1
+requests==2.18.4
+simplejson==3.17.0
+six==1.11.0
+snowballstemmer==2.0.0
+sphinx==3.0.4
+git+https://github.com/agronholm/sphinx-autodoc-typehints.git@a25fa05084b4cee7e9e733603b79e68986a0ffee#egg=sphinx-autodoc-typehints
+sphinx-jsonschema==1.15
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+starlette==0.13.2
+typer==0.2.1
+urllib3==1.22
+uvicorn==0.11.5
+uvloop==0.14.0; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
+wcwidth==0.2.3
+websockets==8.1
+yarl==1.4.2
+zipp==3.1.0; python_version < "3.8"
