--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ description="Manta protocol components"
 authors = ["Alessandro Viganò <alvistar@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "==3.7"
+python = "^3.7"
 cattrs = "*"
 certvalidator = "*"
 cryptography = "*"
